<resources>
    <string name="app_name">Big_file_downloader</string>

    <string name="action_settings">Settings</string>

    <!--Main Activity-->
    <string name="start_download">Start Download</string>

    <!--List item-->
    <string name="start">Start</string>
    <string name="retry">Retry</string>
    <string name="open">Open</string>
    <string name="receive">Receive</string>
    <string name="filename">filename</string>
    <string name="colon">:</string>
    <string name="slash">/</string>
    <string name="total">Total</string>
    <string name="unit">(KB)</string>

    <!--Connect BTN-->
    <string name="default_rul">http://nmsl.kaist.ac.kr/2015fall/cs492c/hw1/input.txt</string>
    <string name="connect">Connect</string>

</resources>
