<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start"
        android:text="@string/start"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/retry"
        android:text="@string/retry"
        android:layout_toRightOf="@+id/start"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/open"
        android:text="@string/open"
        android:layout_toRightOf="@+id/retry"/>

    <TextView
        android:id="@+id/filename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/filename"
        android:layout_below="@+id/start"/>

    <TextView
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/colon"
        android:text="@string/colon"
        android:layout_below="@+id/start"
        android:layout_toRightOf="@id/filename"/>

    <TextView
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/receive"
        android:text="@string/receive"
        android:layout_toRightOf="@id/colon"
        android:layout_below="@id/start"
        />

    <TextView
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mb1"
        android:layout_toRightOf="@id/receive"
        android:text="@string/unit"
        android:layout_below="@id/start"/>

    <TextView
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/slash"
        android:text="@string/slash"
        android:layout_toRightOf="@id/mb1"
        android:layout_below="@id/start"
        />

    <TextView
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total"
        android:text="@string/total"
        android:layout_toRightOf="@id/slash"
        android:layout_below="@id/start"
        />

    <TextView
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mb2"
        android:layout_toRightOf="@id/total"
        android:text="@string/unit"
        android:layout_below="@id/start"/>

    <ProgressBar
        android:id="@+id/file_progress"
        android:layout_width="fill_parent"
        android:layout_height="30dip"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_below="@+id/filename"
        />

</RelativeLayout>