<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    >

    <!--
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/startBtn"
        android:text="@string/start_download"/>
        -->

    <TextView
        android:id="@+id/statusTxt"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/connectBtn"
        android:text="@string/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statusTxt"/>

    <EditText
        android:id="@+id/download_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollHorizontally="true"
        android:layout_below="@+id/statusTxt"
        android:text="@string/default_rul"
        android:layout_toRightOf="@+id/connectBtn"/>

    <ListView
        android:layout_below="@+id/connectBtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list"
        ></ListView>

</RelativeLayout>
